--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,9 @@ Debug/net6.0/
 /SIERRA_Server/.vs/SIERRA_Server/FileContentIndex/8ac8a88f-6f1a-4f20-927e-dea34dd33bb4.vsidx
 /SIERRA_Server/.vs/SIERRA_Server/FileContentIndex/c4e1552b-d4bb-4b1b-918c-58e2c96f8bea.vsidx
 /SIERRA_Server/.vs/SIERRA_Server/FileContentIndex/c4fc39bf-9219-4d1c-93f1-ff0a965a5bd2.vsidx
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/ref/SIERRA_Server.dll
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/refint/SIERRA_Server.dll
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.csproj.CoreCompileInputs.cache
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.dll
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.genruntimeconfig.cache
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.pdb
