feat: apicontroller 查找熱銷前三名甜點，三層修改完成

--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,4 @@ Debug/net6.0/
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.dll
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.genruntimeconfig.cache
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.pdb
+/SIERRA_Server/.vs/SIERRA_Server/v17/.suo
