--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,4 @@ Debug/net6.0/
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.genruntimeconfig.cache
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.pdb
 /SIERRA_Server/.vs/SIERRA_Server/v17/.suo
+/SIERRA_Server/.vs/SIERRA_Server/DesignTimeBuild/.dtbcache.v2
