--- a/.gitignore
+++ b/.gitignore
@@ -384,3 +384,5 @@ Debug/net6.0/
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.pdb
 /SIERRA_Server/.vs/SIERRA_Server/v17/.suo
 /SIERRA_Server/.vs/SIERRA_Server/DesignTimeBuild/.dtbcache.v2
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.csproj.FileListAbsolute.txt
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.GeneratedMSBuildEditorConfig.editorconfig
