--- a/SIERRA_Server/SIERRA_Server/efpt.config.json
+++ b/SIERRA_Server/SIERRA_Server/efpt.config.json
@@ -136,7 +136,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "laptop-7kfrfjie.Sierra0801.dbo",
+   "UiHint": "desktop-paksetb.Sierra0801.dbo",
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
