--- a/.gitignore
+++ b/.gitignore
@@ -389,3 +389,5 @@ Debug/net6.0/
 /SIERRA_Server/SIERRA_Server/efpt.config.json
 /SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.csproj.FileListAbsolute.txt
 /SIERRA_Server/SIERRA_Server/bin/Debug/net6.0/SIERRA_Server.deps.json
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/apphost.exe
+/SIERRA_Server/SIERRA_Server/obj/Debug/net6.0/SIERRA_Server.csproj.FileListAbsolute.txt
