feat:GoogleLogin(working on)

--- a/SIERRA_Server/SIERRA_Server/appsettings.json
+++ b/SIERRA_Server/SIERRA_Server/appsettings.json
@@ -19,6 +19,10 @@
 		"Email": "ispanfuen28team3@gmail.com",
 		"Password": "ispan-fuen28*team3",
 		"ApplicationPassword": "ocefxmfhtzphueoy"
+	},
+	"GoogleAuthentication": {
+		"ClientId": "355215602606-s2il7abeb0588htsu4j66vlvn0osfoi7.apps.googleusercontent.com",
+		"ClientSecret": "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"
 	}
 
 }
