feat: Customer question get response success

--- a/SIERRA_Server/SIERRA_Server/appsettings.json
+++ b/SIERRA_Server/SIERRA_Server/appsettings.json
@@ -23,6 +23,6 @@
 	"GoogleAuthentication": {
 		"ClientId": "355215602606-s2il7abeb0588htsu4j66vlvn0osfoi7.apps.googleusercontent.com",
 		"ClientSecret": "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"
-	}
-
+	},
+	"OpenAI": { "Key": "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" }
 }
